# rag_app

./: .cursorrules  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.chroma  Dockerfile.ingest  LICENSE  README.md  cleanup_test_environment.ps1  docker-compose.yml  promt_editor.md  promt_with_context.txt  pyproject.toml  requirements_api.txt  requirements_ingest.txt
.serena/: project.yml
agent_context/: claude_router.md
benchmarks/: config.py  enrich_custom_docs_from_langfuse.py  export_for_judge.py  protocols.py
datasets/: entity_dictionary.json  eval_dataset.json  eval_dataset_quick.json  eval_dataset_quick_v2.json  eval_dataset_v3.json  eval_golden_v1.json  eval_golden_v2.json  eval_golden_v2_fixed.json  eval_questions.json  eval_retrieval_100.json  eval_retrieval_calibration.json  eval_retrieval_v3.json  planner_stopwords.json  query_normalization_lexicon.json  tool_keywords.json  whitening_params.npz  yandex_conf_full_transcript.txt  yandex_multiagent_transcript.txt  yandex_rag_transcript.txt
deploy/: mcp.env
docs/: Architecture_ru.md  diagram.md
experiments/: PROTOCOL.md  baseline.yaml  log.md
scripts/: _ce_score_distribution.py  _compose_comparison.py  _merge_comparison.py  _pipeline_trace.py  _pipeline_trace_v2.py  _run_phase2_ablation.py  _run_phase2_experiments.py  _stage_attribution.py  add_colbert_vectors.py  analyze_eval.py  build_architecture.py  build_golden_v3_draft.py  calibrate_coverage.py  compute_channel_profiles.py  compute_confidence.py  compute_weekly_digest.py  evaluate_agent.py  evaluate_ndr_rsr_ror.py  evaluate_retrieval.py  evaluate_retrieval_full.py  evaluate_robustness.py  export_golden_v3_review_packet.py  export_traces.py  generate_retrieval_dataset.py  gpu_server.py  ingest_telegram.py  langfuse_relay.py  merge_eval_report.py  migrate_collection.py  parity_check.py  payload_enrichment.py  run_benchmark_agent.py  run_benchmark_retrieval.py  run_nli.py  run_three_sitter.bat  smoke_test_analytics.py  start_repo_semantic_mcp.sh  start_wsl_tei_relay.cmd  transcribe.py  validate_channels.py  (+4 more)
src/: main.py
(+593 files in other folders)
