[project]
name = "rag-app"
version = "0.1.0"
requires-python = ">=3.11"

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-import-not-at-top — conditional/lazy imports
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise-without-from-inside-except — low priority
    "B905",   # zip without strict — too noisy
    "SIM102", # collapsible-if — readability preference
    "SIM105", # suppressible-exception — contextlib.suppress not always clearer
    "SIM108", # ternary — readability preference
    "RUF001", # ambiguous unicode — Russian text everywhere
    "RUF002", # ambiguous unicode docstrings
    "RUF003", # ambiguous unicode comments
    "RUF012", # mutable-class-default — Settings class pattern
    "UP007",  # Use X | Y for union — keep Optional for clarity
    "UP042",  # replace-str-enum — keep StrEnum compat
]

[tool.ruff.lint.isort]
known-first-party = [
    "adapters", "api", "core", "schemas", "services", "utils",
]

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-x -q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Mypy (basic) ─────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
